# project24.1

./: .env.sample  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
config/: settings.py  urls.py
fixtures/: materials_data.json  user_data.json
materials/: admin.py  models.py  paginators.py  serializers.py  tasks.py  tests.py  urls.py  validators.py  views.py
materials/migrations/: 0001_initial.py  0002_course_owner_lesson_owner.py  0003_course_amount_lesson_amount.py  0004_course_created_at_course_updated_at_and_more.py
subscription/: models.py  tests.py  urls.py  views.py
subscription/migrations/: 0001_initial.py
users/: models.py  permissions.py  serializers.py  services.py  tasks.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_alter_user_options_remove_user_username_user_avatar_and_more.py  0003_payment.py  0004_payment_payment_link_payment_session_id.py  0005_remove_payment_payment_amount.py
